--- a/Backend/package.json
+++ b/Backend/package.json
@@ -15,11 +15,15 @@
     "@types/node": "^14.14.34",
     "@typescript-eslint/eslint-plugin": "^4.17.0",
     "@typescript-eslint/parser": "^4.17.0",
-    "dotenv": "^8.2.0",
     "eslint": "^7.22.0",
+    "typeorm": "^0.2.31",
     "typescript": "^4.2.3"
   },
   "dependencies": {
-    "express": "^4.17.1"
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "mysql": "^2.14.1",
+    "reflect-metadata": "^0.1.10",
+    "typeorm": "0.2.31"
   }
 }
