--- a/Backend/package.json
+++ b/Backend/package.json
@@ -15,7 +15,7 @@
     "@types/node": "^14.14.34",
     "@typescript-eslint/eslint-plugin": "^4.17.0",
     "@typescript-eslint/parser": "^4.17.0",
-    "eslint": "^7.22.0",
+    "prettier-eslint": "^12.0.0",
     "typescript": "^4.2.3"
   },
   "dependencies": {
