--- a/Backend/package.json
+++ b/Backend/package.json
@@ -4,6 +4,8 @@
   "description": "The backend sub-repo of CSCI3100 course project: HikEasy.",
   "main": "index.js",
   "scripts": {
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix",
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "npm install && tsc && node build/index.js"
   },
@@ -13,8 +15,12 @@
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.11",
     "@types/node": "^14.14.34",
-    "@typescript-eslint/eslint-plugin": "^4.17.0",
-    "@typescript-eslint/parser": "^4.17.0",
+    "@typescript-eslint/eslint-plugin": "^4.18.0",
+    "@typescript-eslint/parser": "^4.18.0",
+    "eslint": "^7.22.0",
+    "eslint-config-prettier": "^8.1.0",
+    "eslint-plugin-prettier": "^3.3.1",
+    "prettier": "^2.2.1",
     "prettier-eslint": "^12.0.0",
     "typescript": "^4.2.3"
   },
