--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -3,11 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.11.3",
+    "@material-ui/icons": "^4.11.2",
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.8.3",
     "firebase": "^8.3.0",
     "firebaseui": "^4.8.0",
+    "material-ui-search-bar": "^1.0.0",
     "rc-footer": "^0.6.6",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
