--- a/Backend/package.json
+++ b/Backend/package.json
@@ -17,6 +17,7 @@
     "@types/express": "^4.17.11",
     "@types/express-fileupload": "^1.1.6",
     "@types/node": "^14.14.34",
+    "@types/polyline": "^0.1.29",
     "@typescript-eslint/eslint-plugin": "^4.18.0",
     "@typescript-eslint/parser": "^4.18.0",
     "eslint": "^7.22.0",
@@ -27,6 +28,7 @@
     "typescript": "^4.2.3"
   },
   "dependencies": {
+    "@mapbox/polyline": "^1.1.1",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
