--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -11,10 +11,12 @@
     "@testing-library/user-event": "^12.8.3",
     "firebase": "^8.3.0",
     "firebaseui": "^4.8.0",
+    "leaflet": "^1.7.1",
     "material-ui-search-bar": "^1.0.0",
     "rc-footer": "^0.6.6",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-leaflet": "^3.1.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-scroll-to-top": "^1.0.5",
