--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -20,6 +20,7 @@
     "rc-footer": "^0.6.6",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-grid-gallery": "^0.5.5",
     "react-leaflet": "^3.1.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
