--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -12,6 +12,7 @@
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.8.3",
+    "animate.css": "^4.1.1",
     "axios": "^0.21.1",
     "firebase": "^8.3.0",
     "firebaseui": "^4.8.0",
