Create card grid in event list page
Co-Authored-By: Vincent Wong <vincentwwy168@gmail.com>
Co-Authored-By: briansodenkin <66714154+briansodenkin@users.noreply.github.com>

--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -16,6 +16,7 @@
     "axios": "^0.21.1",
     "firebase": "^8.3.0",
     "firebaseui": "^4.8.0",
+    "image-size": "^0.9.7",
     "leaflet": "^1.7.1",
     "material-ui-search-bar": "^1.0.0",
     "rc-footer": "^0.6.6",
@@ -26,6 +27,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-scroll-to-top": "^1.0.5",
+    "react-stonecutter": "^0.3.10",
     "react-toggle": "^4.1.2",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^2.0.3",
