Add event info pane
Co-Authored-By: briansodenkin <66714154+briansodenkin@users.noreply.github.com>

--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -12,6 +12,7 @@
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.8.3",
+    "@trendmicro/react-sidenav": "^0.5.0",
     "animate.css": "^4.1.1",
     "axios": "^0.21.1",
     "firebase": "^8.3.0",
@@ -21,6 +22,7 @@
     "material-ui-search-bar": "^1.0.0",
     "rc-footer": "^0.6.6",
     "react": "^17.0.2",
+    "react-collapse-pane": "^1.4.2",
     "react-dom": "^17.0.2",
     "react-grid-gallery": "^0.5.5",
     "react-leaflet": "^3.1.0",
