--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -22,6 +22,7 @@
     "material-ui-search-bar": "^1.0.0",
     "rc-footer": "^0.6.6",
     "react": "^17.0.2",
+    "react-calendar-icon": "^0.9.4",
     "react-collapse-pane": "^1.4.2",
     "react-dom": "^17.0.2",
     "react-grid-gallery": "^0.5.5",
