--- a/Backend/package.json
+++ b/Backend/package.json
@@ -30,6 +30,7 @@
     "typescript": "^4.2.3"
   },
   "dependencies": {
+    "@mapbox/polyline": "^1.1.1",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
