--- a/Backend/package.json
+++ b/Backend/package.json
@@ -16,10 +16,10 @@
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.11",
     "@types/express-fileupload": "^1.1.6",
+    "@types/mapbox__polyline": "^1.0.2",
     "@types/node": "^14.14.34",
     "@types/passport": "^1.0.6",
     "@types/passport-jwt": "^3.0.5",
-    "@types/polyline": "^0.1.29",
     "@typescript-eslint/eslint-plugin": "^4.18.0",
     "@typescript-eslint/parser": "^4.18.0",
     "eslint": "^7.22.0",
