--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -27,9 +27,11 @@
     "react-dom": "^17.0.2",
     "react-grid-gallery": "^0.5.5",
     "react-leaflet": "^3.1.0",
+    "react-loading-overlay": "^1.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-scroll-to-top": "^1.0.5",
+    "react-spinners": "^0.10.6",
     "react-stonecutter": "^0.3.10",
     "react-toggle": "^4.1.2",
     "semantic-ui-css": "^2.4.1",
